k8s/_generated/apps/krakend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: krakend
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 8080
    targetPort: 8080
    protocol: TCP
  selector:
    app: krakend
